<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".view.fragment.DetailFragment">

    <!-- Toolbar -->
    <include
        android:id="@+id/toolbar_custom"
        layout="@layout/toolbar_custom"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardImage"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/toolbar_custom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/imgMascota"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/dog"
            android:contentDescription="@string/imagen_de_la_mascota"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvTurno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/red_button"
        android:elevation="8dp"
        app:layout_constraintTop_toTopOf="@id/cardInfo"
        app:layout_constraintEnd_toEndOf="@id/cardInfo"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="80dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@android:color/white"
        app:layout_constraintTop_toTopOf="@id/cardImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="80dp"
            android:paddingBottom="24dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp">

            <TextView
                android:id="@+id/tvRaza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/raza"
                android:layout_marginTop="24dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:layout_marginBottom="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/tvSintoma"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/s_ntomas"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:gravity="center"
                    android:paddingBottom="4dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/red_button"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tvPropietario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre_del_propietario"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="8dp"/>

            <!-- Teléfono -->
            <TextView
                android:id="@+id/tvTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tel_fono"
                android:textSize="16sp"
                android:textColor="@android:color/black"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- Botón eliminar (esquina inferior izquierda) -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_delete"
        android:backgroundTint="@color/red_button"
        app:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="24dp"
        android:contentDescription="@string/eliminar_cita"/>

    <!-- Botón editar (esquina inferior derecha) -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_edit"
        android:backgroundTint="@color/toolbar_background_color"
        app:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/editar_cita"/>

</androidx.constraintlayout.widget.ConstraintLayout>