<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.NewDateFragment"
    android:background="@color/white">

    <include
        android:id="@+id/toolbar_custom"
        layout="@layout/toolbar_custom"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_nombre_mascota"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_de_la_mascota"
        app:layout_constraintTop_toBottomOf="@id/toolbar_custom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/CustomTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_nombre_mascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLength="15"
            style="@style/CustomTextInputEditText"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Input Raza con AutoCompleteTextView -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_raza"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/raza"
        android:textColorHint="@color/hint_gray"
        app:boxStrokeColor="@color/purple_500"
        app:hintTextColor="@color/purple_500"
        app:layout_constraintTop_toBottomOf="@id/til_nombre_mascota"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

        <AutoCompleteTextView
            android:id="@+id/act_raza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:labelFor="@+id/act_raza"
            style="@style/CustomTextInputEditText" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Input Nombre del propietario -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_nombre_propietario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_del_propietario"
        app:layout_constraintTop_toBottomOf="@id/til_raza"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/CustomTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_nombre_propietario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLength="30"
            style="@style/CustomTextInputEditText"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Input Teléfono -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_telefono"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/tel_fono"
        app:layout_constraintTop_toBottomOf="@id/til_nombre_propietario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/CustomTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLength="10"
            style="@style/CustomTextInputEditText"/>

    </com.google.android.material.textfield.TextInputLayout>

    <AutoCompleteTextView
        android:id="@+id/act_sintomas"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="168dp"
        android:hint="@string/s_ntomas"
        android:textColorHint="@color/hint_gray"
        android:textColor="@color/black"
        android:background="@drawable/spinner_background"
        android:paddingStart="16dp"
        android:paddingEnd="40dp"
        android:textSize="14sp"
        android:inputType="none"
        android:maxLines="1"
        android:gravity="start|center_vertical"
        app:layout_constraintTop_toBottomOf="@id/til_telefono"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Botón Guardar Cita -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_guardar_cita"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:text="Guardar Cita"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:cornerRadius="24dp"
        app:icon="@drawable/ic_save"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/act_sintomas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="110dp" />

</androidx.constraintlayout.widget.ConstraintLayout>